[project]
name = "proxy"
version = "2025.9.2"
description = "A very simple pure python proxy"
readme = "README.md"
authors = [
    { name = "Daniel Engvall", email = "daniel@engvalls.eu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
proxy = "proxy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
